--- a/index.html
+++ b/index.html
@@ -82,10 +82,13 @@
                                 <li><span class="bg-(image:--gradient-top) bg-clip-text text-transparent">></span> SQL <span class="bg-(image:--gradient-top) bg-clip-text text-transparent"><</span></li>
                                 <li><span class="bg-(image:--gradient-top) bg-clip-text text-transparent">></span> Tailwind <span class="bg-(image:--gradient-top) bg-clip-text text-transparent"><</span></li>
                             </ul>
-                            <div class="bg-(image:--gradient) flex w-fit p-0.5 relative">
-                                <a href="./src/images/Currículo.pdf" target="_blank" class="bg-[#f5f5f5] px-10 py-1 font-[poppins] text-sm cursor-pointer">Curriculo</a>
-                                <div class="absolute w-1.5 h-1.5 border-l-1 border-t-1 flex m-1"></div>
-                            </div>
+                            <a href="./src/images/Currículo.pdf" target="_blank" class="bg-(image:--gradient) flex w-35 p-0.5 relative" id="box-text-link">
+                                <div class="flex w-full bg-[#f5f5f5]">
+                                    <div class="w-full py-1 font-[poppins] text-sm cursor-pointer flex justify-center" id="text-link">Curriculo</div>
+                                </div>
+                                <div class="flex bg-(image:--gradient) w-full h-full" id="depois"></div>   
+                                <div class="absolute w-1.5 h-1.5 border-l-1 border-t-1 flex m-1" id="text-link"></div>
+                            </a>
                         </div>
                         <div class="z-10 flex relative md:justify-center lg:col-start-2 lg:items-center lg:row-span-2">
                             <div class="w-3/7 bg-(image:--gradient) p-0.5 lg:w-4/7 xl:w-3/7">
@@ -101,8 +104,8 @@
                 <div class="bg-[#f0f0f0] pt-50 pb-25 px-5 lg:px-20 xl:px-25">
                     <p class="font-[poppins] text-2xl font-medium lg:text-3xl">< projetos ></p>
                     <div class="w-3/5 h-0.5 bg-(image:--gradient) mx-5 mt-5"></div>
-                    <div class="my-30 flex flex-wrap gap-20 justify-center mx-10">
-                        <div class="bg-[#f5f5f5] w-full p-5 flex flex-col justify-between gap-5 md:w-2/5 2xl:w-2/7">
+                    <div class="my-30 flex flex-wrap gap-10 justify-center mx-5">
+                        <div class="bg-[#f5f5f5] w-full p-5 flex flex-col justify-between gap-5 md:w-4/9 2xl:w-2/7">
                             <div>
                                 <img src="./src/images/fundo banner.png" alt="">
                                 <div class="mt-5 flex flex-col gap-5">
@@ -115,22 +118,58 @@
                                 </div>
                             </div>
                             <div class="flex gap-x-5 gap-y-2 flex-wrap">
-                                <a href="https://github.com/CauaDK/Boleria-Gaby" target="_blank" class="  bg-(image:--gradient-azul) flex p-0.5">
-                                    <div class="flex items-center gap-3 bg-[#f5f5f5] px-3 py-1">
-                                        <svg class="fill-black" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="24" height="24" viewBox="0 0 24 24">
+                                <a href="https://github.com/CauaDK/Boleria-Gaby" target="_blank" class="bg-(image:--gradient-azul) flex p-0.5 w-30 relative" id="box-text-link">
+                                    <div class="flex items-center justify-center gap-3 bg-[#f5f5f5] py-1 w-full">
+                                        <svg class="fill-black" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="24" height="24" viewBox="0 0 24 24" id="text-link-fill">
                                             <path d="M10.9,2.1c-4.6,0.5-8.3,4.2-8.8,8.7c-0.6,5,2.5,9.3,6.9,10.7v-2.3c0,0-0.4,0.1-0.9,0.1c-1.4,0-2-1.2-2.1-1.9 c-0.1-0.4-0.3-0.7-0.6-1C5.1,16.3,5,16.3,5,16.2C5,16,5.3,16,5.4,16c0.6,0,1.1,0.7,1.3,1c0.5,0.8,1.1,1,1.4,1c0.4,0,0.7-0.1,0.9-0.2 c0.1-0.7,0.4-1.4,1-1.8c-2.3-0.5-4-1.8-4-4c0-1.1,0.5-2.2,1.2-3C7.1,8.8,7,8.3,7,7.6C7,7.2,7,6.6,7.3,6c0,0,1.4,0,2.8,1.3 C10.6,7.1,11.3,7,12,7s1.4,0.1,2,0.3C15.3,6,16.8,6,16.8,6C17,6.6,17,7.2,17,7.6c0,0.8-0.1,1.2-0.2,1.4c0.7,0.8,1.2,1.8,1.2,3 c0,2.2-1.7,3.5-4,4c0.6,0.5,1,1.4,1,2.3v3.3c4.1-1.3,7-5.1,7-9.5C22,6.1,16.9,1.4,10.9,2.1z"></path>
                                         </svg>
-                                        <div class="font-[poppins] text-base font-normal">GitHub</div>
+                                        <div class="font-[poppins] text-base font-normal" id="text-link">GitHub</div>
                                     </div>
+                                    <div class="flex bg-(image:--gradient-azul) w-full h-full" id="depois"></div>  
                                 </a>
-                                <a href="https://cauadk.github.io/Boleria-Gaby/" target="_blank" class="  bg-(image:--gradient-rosa) flex p-0.5">
+                                <a href="https://cauadk.github.io/Boleria-Gaby/" target="_blank" class="bg-(image:--gradient-rosa) flex p-0.5 w-30 relative" id="box-text-link">
                                     <div class="flex items-center gap-3 bg-[#f5f5f5] px-3 py-1">
-                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" class="size-6">
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" class="size-6" id="text-link">
                                             <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" />
                                             <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
                                         </svg>
-                                        <div class="font-[poppins] text-base font-normal">Deploy</div>
+                                        <div class="font-[poppins] text-base font-normal" id="text-link">Deploy</div>
                                     </div>
+                                    <div class="flex bg-(image:--gradient-rosa) w-full h-full" id="depois"></div> 
+                                </a>
+                            </div>
+                        </div>
+                        <div class="bg-[#f5f5f5] w-full p-5 flex flex-col justify-between gap-5 md:w-4/9 2xl:w-2/7">
+                            <div>
+                                <img src="./src/images/fundo banner.png" alt="">
+                                <div class="mt-5 flex flex-col gap-5">
+                                    <p class="font-[poppins] text-xl font-medium">Bolos Gaby</p>
+                                    <ul class="opacity-70 font-[poppins] text-base font-light flex flex-wrap gap-5">
+                                        <li>HTML</li>
+                                        <li>CSS</li>
+                                        <li>JavaScript</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="flex gap-x-5 gap-y-2 flex-wrap">
+                                <a href="https://github.com/CauaDK/Boleria-Gaby" target="_blank" class="bg-(image:--gradient-azul) flex p-0.5 w-30 relative" id="box-text-link">
+                                    <div class="flex items-center justify-center gap-3 bg-[#f5f5f5] py-1 w-full">
+                                        <svg class="fill-black" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="24" height="24" viewBox="0 0 24 24" id="text-link-fill">
+                                            <path d="M10.9,2.1c-4.6,0.5-8.3,4.2-8.8,8.7c-0.6,5,2.5,9.3,6.9,10.7v-2.3c0,0-0.4,0.1-0.9,0.1c-1.4,0-2-1.2-2.1-1.9 c-0.1-0.4-0.3-0.7-0.6-1C5.1,16.3,5,16.3,5,16.2C5,16,5.3,16,5.4,16c0.6,0,1.1,0.7,1.3,1c0.5,0.8,1.1,1,1.4,1c0.4,0,0.7-0.1,0.9-0.2 c0.1-0.7,0.4-1.4,1-1.8c-2.3-0.5-4-1.8-4-4c0-1.1,0.5-2.2,1.2-3C7.1,8.8,7,8.3,7,7.6C7,7.2,7,6.6,7.3,6c0,0,1.4,0,2.8,1.3 C10.6,7.1,11.3,7,12,7s1.4,0.1,2,0.3C15.3,6,16.8,6,16.8,6C17,6.6,17,7.2,17,7.6c0,0.8-0.1,1.2-0.2,1.4c0.7,0.8,1.2,1.8,1.2,3 c0,2.2-1.7,3.5-4,4c0.6,0.5,1,1.4,1,2.3v3.3c4.1-1.3,7-5.1,7-9.5C22,6.1,16.9,1.4,10.9,2.1z"></path>
+                                        </svg>
+                                        <div class="font-[poppins] text-base font-normal" id="text-link">GitHub</div>
+                                    </div>
+                                    <div class="flex bg-(image:--gradient-azul) w-full h-full" id="depois"></div>  
+                                </a>
+                                <a href="https://cauadk.github.io/Boleria-Gaby/" target="_blank" class="bg-(image:--gradient-rosa) flex p-0.5 w-30 relative" id="box-text-link">
+                                    <div class="flex items-center gap-3 bg-[#f5f5f5] px-3 py-1">
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" class="size-6" id="text-link">
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" />
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                                        </svg>
+                                        <div class="font-[poppins] text-base font-normal" id="text-link">Deploy</div>
+                                    </div>
+                                    <div class="flex bg-(image:--gradient-rosa) w-full h-full" id="depois"></div> 
                                 </a>
                             </div>
                         </div>
@@ -179,26 +218,24 @@
                 <div class="xl:w-2/3">
                     <p class="text-2xl font-[poppins] font-medium lg:text-3xl 2xl:text-4xl">Entre em contato e vamos realizar seu projeto juntos!</p>
                 </div>
-                <div class="flex flex-col gap-5">
-                    <a href="" class="flex justify-end">
-                        <div class="bg-(image:--gradient) p-0.5 w-fit justify-end">
-                            <div class="bg-[#f0f0f0] py-1 px-5 flex gap-5 items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" class="size-4 xl:size-5">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75" />
-                                </svg>
-                                <div class="text-sm font-[poppins] font-light xl:text-base">cauamohor10@gmail.com</div>
-                            </div>
+                <div class="flex flex-col gap-5 items-end">
+                    <a href="mailto:cauamohor10@gmail.com" target="_blank" type="mailto" class="flex bg-(image:--gradient) w-65 p-0.5 relative xl:w-80" id="box-text-link">
+                        <div class="bg-[#f0f0f0] py-1 flex gap-5 items-center w-full justify-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" class="size-4 xl:size-5" id="text-link">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75" />
+                            </svg>
+                            <div class="text-sm font-[poppins] font-light xl:text-base" id="text-link">cauamohor10@gmail.com</div>
                         </div>
+                        <div class="flex bg-(image:--gradient) w-full h-full" id="depois"></div>
                     </a>
-                    <a href="" class="flex justify-end">
-                        <div class="bg-(image:--gradient) p-0.5 w-fit justify-end">
-                            <div class="bg-[#f0f0f0] py-1 px-5 flex gap-5  items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0,0,256,256" class="w-4 h-4 xl:w-5 xl:h-5">
-                                    <g fill="#000" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(10.66667,10.66667)"><path d="M12.01172,2c-5.506,0 -9.98823,4.47838 -9.99023,9.98438c-0.001,1.76 0.45998,3.47819 1.33398,4.99219l-1.35547,5.02344l5.23242,-1.23633c1.459,0.796 3.10144,1.21384 4.77344,1.21484h0.00391c5.505,0 9.98528,-4.47937 9.98828,-9.98437c0.002,-2.669 -1.03588,-5.17841 -2.92187,-7.06641c-1.886,-1.887 -4.39245,-2.92673 -7.06445,-2.92773zM12.00977,4c2.136,0.001 4.14334,0.8338 5.65234,2.3418c1.509,1.51 2.33794,3.51639 2.33594,5.65039c-0.002,4.404 -3.58423,7.98633 -7.99023,7.98633c-1.333,-0.001 -2.65341,-0.3357 -3.81641,-0.9707l-0.67383,-0.36719l-0.74414,0.17578l-1.96875,0.46484l0.48047,-1.78516l0.2168,-0.80078l-0.41406,-0.71875c-0.698,-1.208 -1.06741,-2.58919 -1.06641,-3.99219c0.002,-4.402 3.58528,-7.98437 7.98828,-7.98437zM8.47656,7.375c-0.167,0 -0.43702,0.0625 -0.66602,0.3125c-0.229,0.249 -0.875,0.85208 -0.875,2.08008c0,1.228 0.89453,2.41503 1.01953,2.58203c0.124,0.166 1.72667,2.76563 4.26367,3.76563c2.108,0.831 2.53614,0.667 2.99414,0.625c0.458,-0.041 1.47755,-0.60255 1.68555,-1.18555c0.208,-0.583 0.20848,-1.0845 0.14648,-1.1875c-0.062,-0.104 -0.22852,-0.16602 -0.47852,-0.29102c-0.249,-0.125 -1.47608,-0.72755 -1.70508,-0.81055c-0.229,-0.083 -0.3965,-0.125 -0.5625,0.125c-0.166,0.25 -0.64306,0.81056 -0.78906,0.97656c-0.146,0.167 -0.29102,0.18945 -0.54102,0.06445c-0.25,-0.126 -1.05381,-0.39024 -2.00781,-1.24024c-0.742,-0.661 -1.24267,-1.47656 -1.38867,-1.72656c-0.145,-0.249 -0.01367,-0.38577 0.11133,-0.50977c0.112,-0.112 0.24805,-0.2915 0.37305,-0.4375c0.124,-0.146 0.167,-0.25002 0.25,-0.41602c0.083,-0.166 0.04051,-0.3125 -0.02149,-0.4375c-0.062,-0.125 -0.54753,-1.35756 -0.76953,-1.85156c-0.187,-0.415 -0.3845,-0.42464 -0.5625,-0.43164c-0.145,-0.006 -0.31056,-0.00586 -0.47656,-0.00586z"></path></g></g>
-                                </svg>
-                                <div class="text-sm font-[poppins] font-light xl:text-base">(12) 99663-7765</div>
-                            </div>
+                    <a href="https://wa.me/5512996637765" target="_blank" class="flex bg-(image:--gradient) w-45 p-0.5 relative xl:w-55" id="box-text-link">
+                        <div class="bg-[#f0f0f0] py-1  flex gap-5 items-center w-full justify-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0,0,256,256" class="w-4 h-4 xl:w-5 xl:h-5" id="text-link">
+                                <g fill="#000" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(10.66667,10.66667)"><path d="M12.01172,2c-5.506,0 -9.98823,4.47838 -9.99023,9.98438c-0.001,1.76 0.45998,3.47819 1.33398,4.99219l-1.35547,5.02344l5.23242,-1.23633c1.459,0.796 3.10144,1.21384 4.77344,1.21484h0.00391c5.505,0 9.98528,-4.47937 9.98828,-9.98437c0.002,-2.669 -1.03588,-5.17841 -2.92187,-7.06641c-1.886,-1.887 -4.39245,-2.92673 -7.06445,-2.92773zM12.00977,4c2.136,0.001 4.14334,0.8338 5.65234,2.3418c1.509,1.51 2.33794,3.51639 2.33594,5.65039c-0.002,4.404 -3.58423,7.98633 -7.99023,7.98633c-1.333,-0.001 -2.65341,-0.3357 -3.81641,-0.9707l-0.67383,-0.36719l-0.74414,0.17578l-1.96875,0.46484l0.48047,-1.78516l0.2168,-0.80078l-0.41406,-0.71875c-0.698,-1.208 -1.06741,-2.58919 -1.06641,-3.99219c0.002,-4.402 3.58528,-7.98437 7.98828,-7.98437zM8.47656,7.375c-0.167,0 -0.43702,0.0625 -0.66602,0.3125c-0.229,0.249 -0.875,0.85208 -0.875,2.08008c0,1.228 0.89453,2.41503 1.01953,2.58203c0.124,0.166 1.72667,2.76563 4.26367,3.76563c2.108,0.831 2.53614,0.667 2.99414,0.625c0.458,-0.041 1.47755,-0.60255 1.68555,-1.18555c0.208,-0.583 0.20848,-1.0845 0.14648,-1.1875c-0.062,-0.104 -0.22852,-0.16602 -0.47852,-0.29102c-0.249,-0.125 -1.47608,-0.72755 -1.70508,-0.81055c-0.229,-0.083 -0.3965,-0.125 -0.5625,0.125c-0.166,0.25 -0.64306,0.81056 -0.78906,0.97656c-0.146,0.167 -0.29102,0.18945 -0.54102,0.06445c-0.25,-0.126 -1.05381,-0.39024 -2.00781,-1.24024c-0.742,-0.661 -1.24267,-1.47656 -1.38867,-1.72656c-0.145,-0.249 -0.01367,-0.38577 0.11133,-0.50977c0.112,-0.112 0.24805,-0.2915 0.37305,-0.4375c0.124,-0.146 0.167,-0.25002 0.25,-0.41602c0.083,-0.166 0.04051,-0.3125 -0.02149,-0.4375c-0.062,-0.125 -0.54753,-1.35756 -0.76953,-1.85156c-0.187,-0.415 -0.3845,-0.42464 -0.5625,-0.43164c-0.145,-0.006 -0.31056,-0.00586 -0.47656,-0.00586z" id="text-link-fill"></path></g></g>
+                            </svg>
+                            <div class="text-sm font-[poppins] font-light xl:text-base" id="text-link">(12) 99663-7765</div>
                         </div>
+                        <div class="flex bg-(image:--gradient) w-full h-full" id="depois"></div>
                     </a>
                 </div>
                 <div class="flex justify-center">
